Revision history for Perl extension Net::SSH2.

0.52  2013-08-14 02:43:11
        - detect scp not being installed on the remote and return undef from
          scp_put (krimdomu: Jan) (GitHub PR: #17)

0.51  2013-08-03 21:17:47
        - turn off -std=c89 -pedantic-errors for all builds except authors not
          on mingw or solaris

0.50  2013-07-29 10:25:13
        - remove #warning, not standard C89, throws an error on non-threaded
          builds due to -pedantic-errors (RT#87398)

0.49  2013-07-22 20:11:25
        - compile on gcc with '-DPERL_GCC_PEDANTIC -std=c89 -pedantic-errors -Wno-long-long' to enforce maximum compatibility with C89 (RT#87069)

0.48  2013-02-20 20:58:18
        - fix builds on non-threaded perls (mauke: Lukas Mai)
        - set default extra libs for Win32 (kmx)

0.47  2013-02-10 19:06:42
        - timeout method to set a global timeout for every action (uses
          libssh2_session_set_timeout) (pullreq from Thierry Treyer: zehkae)
        - threads support for OpenSSL and libgcrypt (pullreq from James Mccoy:
          jamessan)
        - support for building with libgcrypt (pass gcrypt to Makefile.PL)
          (pullreq from James Mccoy: jamessan)

0.46  2012-11-10 01:33:14
        - patch from Robert-Jean Denault (Robert-jean.Denault@telus.com) to fix
          segfault when releasing sftp object in debug mode

0.45  2012-05-27 09:18:49
        - add 64bit instructions to BUILDING.WIN32 and clarify some things

0.44  2012-04-25 16:27:55
        - update to latest ppport.h
        - fix memory leak in password auth (RT#76701) (salva)

0.43  2012-04-24 07:47:21
        - correct fix for (RT#73659) (remove inc=/lib= from @ARGV)
        - add BUILDING.WIN32 guide for building on Windows from scratch

0.42  2012-04-19 14:05:44
        - add LD_RUN_PATH/LD_LIBRARY_PATH to search paths (RT#74747)
        - fix order of search paths for libs/includes

0.41  2012-04-18 22:12:07