@@ -1,5 +1,8 @@
 Revision history for Perl extension Net::SSH2.
 
+        - add support for ldargs, and LIBSSH2_LIB, LIBSSH2_INCLUDE,
+          LIBSSH2_LDARGS env vars while building (RT#88265)
+
 0.52  2013-08-14 02:43:11
         - detect scp not being installed on the remote and return undef from
           scp_put (krimdomu: Jan) (GitHub PR: #17)
